// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > data-driven items > matches the baseline markup snapshot for data-driven items 1`] = `
<div>
  <div
    class="stepper"
  >
    <a
      class="stepper-item"
      href="#"
    >
      Account
    </a>
    <div
      aria-current="step"
      class="stepper-item active"
    >
      Shipping
    </div>
  </div>
</div>
`;

exports[`Stepper > rendering > matches the baseline markup snapshot 1`] = `
<div>
  <ol
    class="stepper"
  >
    <li
      class="stepper-item"
    >
      First
    </li>
    <li
      aria-current="step"
      class="stepper-item active"
    >
      Current
    </li>
    <li
      class="stepper-item"
    >
      Last
    </li>
  </ol>
</div>
`;
